Modified news object

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/PokemonListFragement">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/PokemonListFragement"
         android:name="com.example.esieatp1.presentation.list.PokemonListFragement"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_pokemon_list">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/navigateToPokemonDetailFragement"
+            app:destination="@id/PokemonDetailFragement" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/PokemonDetailFragement"
         android:name="com.example.esieatp1.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/navigateToPokemonListFragement"
+            app:destination="@id/PokemonListFragement" />
     </fragment>
 </navigation>
