Modified news object

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/PokemonListFragement">
+    app:startDestination="@id/PokemonListFragment">
 
     <fragment
-        android:id="@+id/PokemonListFragement"
-        android:name="com.example.esieatp1.presentation.list.PokemonListFragement"
+        android:id="@+id/PokemonListFragment"
+        android:name="com.example.esieatp1.presentation.list.PokemonListFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_pokemon_list">
 
         <action
-            android:id="@+id/navigateToPokemonDetailFragement"
-            app:destination="@id/PokemonDetailFragement" />
+            android:id="@+id/navigateToPokemonDetailFragment"
+            app:destination="@id/PokemonDetailFragment" />
     </fragment>
     <fragment
-        android:id="@+id/PokemonDetailFragement"
-        android:name="com.example.esieatp1.SecondFragment"
+        android:id="@+id/PokemonDetailFragment"
+        android:name="com.example.esieatp1.presentation.detail.PokemonDetailFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_pokemon_detail">
 
         <action
-            android:id="@+id/navigateToPokemonListFragement"
-            app:destination="@id/PokemonListFragement" />
+            android:id="@+id/navigateToPokemonListFragment"
+            app:destination="@id/PokemonListFragment" />
     </fragment>
 </navigation>
