Modified news object

--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -7,6 +7,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
+    <ImageView
+        android:id="@+id/pokemon_img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
     <TextView
@@ -14,8 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Pikachu"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pokemon_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
